// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockWaiverBanner renders a current time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--current"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note — 
      Current
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          E:1106
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          3:53pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          4:26pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BlockWaiverBanner renders a future time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--future"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note — 
      Future Notice
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          E:1106
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          4:26pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          4:43pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BlockWaiverBanner renders a past time waiver 1`] = `
<div
  className="m-block-waiver-banner m-block-waiver-banner--past"
>
  <div
    className="m-block-waiver-banner__header"
  >
    <span
      className="m-block-waiver-banner__alert-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="m-block-waiver-banner__title"
    >
      Dispatcher Note — 
      Past Notice
    </div>
  </div>
  <table
    className="m-block-waiver-banner__details"
  >
    <tbody>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label"
        >
          Reason
        </td>
        <td
          className="m-block-waiver-banner__detail-value"
        >
          E:1106
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
        >
          Start Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
        >
          3:36pm
        </td>
      </tr>
      <tr>
        <td
          className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
        >
          End Time
        </td>
        <td
          className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
        >
          3:53pm
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
